Matches light and dark mode CSS vars and fixes issues with dark mode toggle.

--- a/themes/geekboot/assets/scss/light-mode.scss
+++ b/themes/geekboot/assets/scss/light-mode.scss
@@ -17,6 +17,7 @@
 
     // Sidebar nav
     --nav-highlight-color: rgba(80,90,114, .1);
+    --btn-close-color: #000000;
 
     //Version dropdown
     --dropdown-highlight: var(--nav-highlight-color);
